# systek

./: README.md  install.sh  install_service.sh  main.py  pyproject.toml  requirements.txt  systek.py  uninstall.sh
assets/: systek.tcss
scripts/: doctor.sh  post_install.sh
src/Other/: systek.service
src/Utils/: installer.py  update.py
src/systek/: __main__.py  actions.py  app.py  config.py  models.py  ops.py  permissions.py  shell.py  systeminfo.py
src/systek.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/systek/cli/: parser.py
src/systek/core/: actions.py  cockpit.py  disks.py  firewall.py  logs.py  monitor.py  network.py  packages.py  services.py  system.py  updater.py
src/systek/tui/: actions.py  dashboard.py  dialogs.py  panels.py  theme.py
