[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "systek"
version = "2.0.0"
description = "Linux system administration TUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "textual>=0.58.0",
  "rich>=13.7.0",
  "psutil>=5.9.8"
]

[project.scripts]
systek = "systek.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
